<resources>
    <string name="app_name">Al Safa Corner</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Bajitpur Online Shop</string>
    <string name="nav_header_subtitle">njnayeem7@gmail.com</string>
    <string name="nav_header_desc">Navigation header</string>

    <!-- TODO: navigation drawer text define-->
    <string name="menu_library">Library</string>
    <string name="menu_foods">Foods</string>
    <string name="menu_stationary">Stationary</string>
    <string name="menu_toy">Toys</string>
    <string name="menu_furniture">Furniture</string>
    <string name="about_us">About Us</string>
    <string name="share">Share</string>
    <string name="rate_us">Rate Us</string>
    <string name="view_products_data">View Product\'s Data</string>
    <string name="view_customers_order">View Customer\'s Order</string>

    <!-- TODO: array list-->
    <string-array name="CATEGORY_LIST">
        <item>Library</item>
        <item>Foods</item>
        <item>Stationary</item>
        <item>Toys</item>
        <item>Furniture</item>
    </string-array>

    <!-- TODO: action menu text define-->
    <string name="action_settings">Settings</string>
    <string name="action_logout">Logout</string>
    <string name="action_admin">Admin Panel</string>

    <string name="dialog_logout">Are you sure EXIT ?</string>


    <string name="action_order">View Order</string>
    <string name="action_product">View Products</string>

    <!-- TODO:log in text  -->
    <string name="no_account"><u>i have no account</u></string>
    <string name="already_account"><u>already account</u></string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="forgot_password">forgot password</string>
    <string name="log_in">Sign in</string>
    <string name="registration">Sign up</string>

    <!-- TODO: upload activity text  -->
    <string name="product_name">Product name</string>
    <string name="customer_name">Customer Name</string>
    <string name="customer_phone">Customer Phone</string>
    <string name="customer_address">191/B tajgaoun, gulsan link road, Dhaka 1205</string>

    <!-- TODO: upload Library text  -->
    <string name="upload_library_main_text">Upload Library Product</string>
    <string name="select_library_image">Select Library Product Image</string>

    <string name="product_prize">prize</string>
    <string name="product_size">size</string>
    <string name="product_description">Product description max 100 char</string>
    <string name="product_submit_btn">Submit</string>
    <string name="product_information">upload your product information</string>

    <!-- TODO: hind text -->
    <string name="select_categories">Select Category</string>
    <string name="delivery_address">Delivery Address</string>
    <string name="hint_name">Name</string>
    <string name="hint_phone">Phone Ex: 01712266555</string>
    <string name="hint_submit">Submit</string>
    <string name="hint_confirm">Confirm</string>
    <string name="hint_next">Next</string>

    <string name="hint_product_name">Product Name</string>
    <string name="hint_product_info">Product info</string>
    <string name="hint_product_prize">Product Prize</string>
    <string name="hint_product_size">Product Size</string>
    <string name="hint_delivery_prize">Delivery Prize</string>
    <string name="hint_total">Total:</string>
    <string name="available">Stock: Available</string>

    <!-- TODO -->
    <string name="admin_email">njnayeem7@gmail.com</string>

    <!-- TODO: item activity text  -->
    <string name="full_description">Ecommerce is the activity of electronically buying of products on online services over the Internet.</string>

</resources>