<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/logedlogo"
    android:orientation="vertical"
    android:layout_margin="2sp"
    android:weightSum="5"
    tools:context=".UserPanel.Registration.UserRegistration">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0sp"
        android:layout_weight="1.5"
        android:gravity="center">

        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/profile_image_sign_up"
            android:layout_width="150sp"
            android:layout_height="150sp"
            android:src="@drawable/mainlogo"
            app:civ_border_color="@color/colorWhite"
            app:civ_border_width="2sp" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0sp"
        android:layout_weight="2.5"
        android:gravity="center"
        android:orientation="vertical">

        <EditText
            android:id="@+id/edt_sign_up_email"
            android:layout_width="260sp"
            android:layout_height="40sp"
            android:background="@drawable/background_gradint_loging"
            android:drawableStart="@drawable/ic_baseline_email"
            android:hint="@string/email"
            android:maxLines="1"
            android:paddingStart="3sp"
            android:paddingEnd="0sp"
            android:singleLine="true" />

        <EditText
            android:id="@+id/edt_sign_up_password"
            android:layout_width="260sp"
            android:layout_height="40sp"
            android:layout_marginTop="20sp"
            android:background="@drawable/background_gradint_loging"
            android:drawableStart="@drawable/ic_baseline_lock"
            android:hint="@string/password"
            android:inputType="textPassword"
            android:maxLines="1"
            android:paddingStart="3sp"
            android:paddingEnd="0sp"
            android:singleLine="true" />

        <EditText
            android:id="@+id/edt_sign_up_cnfirm_password"
            android:layout_width="260sp"
            android:layout_height="40sp"
            android:layout_marginTop="20sp"
            android:background="@drawable/background_gradint_loging"
            android:drawableStart="@drawable/ic_baseline_lock"
            android:hint="@string/confirm_password"
            android:inputType="textPassword"
            android:maxLines="1"
            android:paddingStart="3sp"
            android:paddingEnd="0sp"
            android:singleLine="true" />

        <androidx.cardview.widget.CardView
            android:layout_width="150sp"
            android:layout_height="45sp"
            android:layout_marginTop="50sp"
            app:cardBackgroundColor="@color/appcolor"
            app:cardCornerRadius="15sp"
            app:cardElevation="10sp">

            <Button
                android:id="@+id/btn_sign_up"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@color/colorPrimary"
                android:drawableEnd="@drawable/ic_baseline_arrow_forward"
                android:drawableTint="@color/colorWhite"
                android:text="@string/registration"
                android:textAllCaps="false"
                android:textColor="@color/colorWhite" />

        </androidx.cardview.widget.CardView>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0sp"
        android:layout_weight="1"
        android:gravity="center">

        <TextView
            android:id="@+id/txt_already_account"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/already_account"
            android:textColor="@color/colorRed"
            android:textSize="14sp"
            android:textStyle="italic" />

    </LinearLayout>

</LinearLayout>