<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".UserPanel.OrderReview"
    android:orientation="vertical"
    android:background="#EDEDED">

    <include
        android:id="@+id/include_order_review_toolbar"
        layout="@layout/custom_toolbar"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="10sp">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:textColor="@color/colorRed"
            android:textStyle="italic"
            android:textSize="12sp"
            android:text="@string/delivery_address"/>

        <EditText
            android:id="@+id/edt_review_delivery_name"
            android:layout_width="match_parent"
            android:layout_height="35sp"
            android:layout_marginStart="5sp"
            android:layout_marginEnd="5sp"
            android:background="@drawable/select_background_gradint"
            android:paddingStart="5sp"
            android:paddingEnd="0sp"
            android:hint="@string/hint_name"
            android:textSize="12sp"
            android:singleLine="true"
            android:maxLines="1"/>

        <EditText
            android:id="@+id/edt_review_delivery_phone"
            android:layout_width="match_parent"
            android:layout_height="35sp"
            android:layout_marginStart="5sp"
            android:layout_marginEnd="5sp"
            android:layout_marginTop="5sp"
            android:background="@drawable/select_background_gradint"
            android:paddingStart="5sp"
            android:paddingEnd="0sp"
            android:maxLength="11"
            android:hint="@string/hint_phone"
            android:inputType="phone"
            android:textSize="12sp"
            android:singleLine="true"
            android:maxLines="1"/>

        <EditText
            android:id="@+id/edt_review_delivery_address"
            android:layout_width="match_parent"
            android:layout_height="35sp"
            android:background="@drawable/select_background_gradint"
            android:paddingStart="5sp"
            android:paddingEnd="0sp"
            android:layout_marginStart="5sp"
            android:layout_marginEnd="5sp"
            android:layout_marginTop="5sp"
            android:hint="@string/delivery_address"
            android:textSize="12sp"
            android:singleLine="true"
            android:maxLines="1"/>

        <Button
            android:id="@+id/btn_submit_delivery_address"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginStart="5sp"
            android:layout_marginEnd="5sp"
            android:layout_marginTop="10sp"
            android:text="@string/hint_submit"
            android:textColor="@color/colorWhite"
            android:background="@drawable/select_background_gradint"
            android:textAllCaps="false"/>

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="5sp"
            android:layout_marginEnd="5sp"
            android:layout_marginTop="10sp"
            app:cardCornerRadius="10sp"
            app:cardElevation="10sp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:layout_margin="10sp">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/hint_product_info"
                    android:textSize="16sp"
                    android:gravity="center"/>

                <View
                    android:layout_width="match_parent"
                    android:layout_height="1sp"
                    android:background="#aaa"/>

                <TextView
                    android:id="@+id/review_product_name"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/hint_product_name"
                    android:paddingStart="10sp"
                    android:paddingEnd="0sp"
                    android:layout_marginTop="5sp"
                    android:textSize="12sp"/>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <TextView
                        android:layout_width="0sp"
                        android:layout_weight="4"
                        android:layout_height="wrap_content"
                        android:text="@string/hint_product_prize"
                        android:paddingEnd="0sp"
                        android:paddingStart="10sp"
                        android:layout_marginTop="5sp"
                        android:textSize="12sp"/>

                    <TextView
                        android:id="@+id/review_product_prize"
                        android:layout_width="0sp"
                        android:layout_weight="1"
                        android:layout_height="wrap_content"
                        android:text="@string/product_prize"
                        android:textSize="12sp"/>

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:layout_marginTop="10sp">

                    <TextView
                        android:layout_width="0sp"
                        android:layout_weight="4"
                        android:layout_height="wrap_content"
                        android:text="@string/hint_delivery_prize"
                        android:paddingStart="10sp"
                        android:paddingEnd="0sp"
                        android:textSize="12sp"/>

                    <TextView
                        android:id="@+id/review_product_delivery_prize"
                        android:layout_width="0sp"
                        android:layout_weight="1"
                        android:layout_height="wrap_content"
                        android:text="@string/product_prize"
                        android:textSize="12sp"/>

                </LinearLayout>

                <View
                    android:layout_width="match_parent"
                    android:layout_height="1sp"
                    android:background="#aaa"/>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:layout_marginTop="5sp">

                    <TextView
                        android:layout_width="0sp"
                        android:layout_weight="4"
                        android:layout_height="wrap_content"
                        android:text="@string/hint_total"
                        android:paddingStart="10sp"
                        android:paddingEnd="0sp"
                        android:textSize="12sp"/>

                    <TextView
                        android:id="@+id/review_product_total_prize"
                        android:layout_width="0sp"
                        android:layout_weight="1"
                        android:layout_height="wrap_content"
                        android:text="@string/product_prize"
                        android:textSize="12sp"/>

                </LinearLayout>

            </LinearLayout>

        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:id="@+id/card_delivery_info"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="5sp"
            app:cardElevation="10sp"
            app:cardCornerRadius="10sp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:layout_margin="10sp">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/delivery_address"
                    android:textSize="16sp"
                    android:gravity="center"/>

                <View
                    android:layout_width="match_parent"
                    android:layout_height="1sp"
                    android:background="#aaa"/>

                <TextView
                    android:id="@+id/review_delivery_name"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/hint_name"
                    android:textSize="12sp"
                    android:paddingStart="10sp"
                    android:paddingEnd="0sp"
                    android:layout_marginTop="5sp"/>

                <TextView
                    android:id="@+id/review_delivery_phone"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/hint_phone"
                    android:textSize="12sp"
                    android:paddingStart="10sp"
                    android:paddingEnd="0sp"
                    android:layout_marginTop="5sp"/>

                <TextView
                    android:id="@+id/review_delivery_address"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/delivery_address"
                    android:textSize="12sp"
                    android:paddingStart="10sp"
                    android:paddingEnd="0sp"
                    android:layout_marginTop="5sp"/>

            </LinearLayout>

        </androidx.cardview.widget.CardView>

    </LinearLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <Button
            android:id="@+id/btn_delivery_confirm"
            android:layout_width="match_parent"
            android:layout_height="46sp"
            android:text="@string/hint_confirm"
            android:textAllCaps="false"
            android:gravity="center"
            android:textSize="16sp"
            android:layout_alignParentBottom="true"
            android:textColor="@color/colorWhite"
            android:background="@color/colorPrimary"/>

    </RelativeLayout>

</LinearLayout>