<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="150dp"
    android:layout_height="167dp"
    android:layout_margin="5sp"
    app:cardBackgroundColor="@color/colorWhite"
    app:cardCornerRadius="8sp"
    app:cardElevation="10sp">

    <LinearLayout
        android:id="@+id/layout_related_item"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/related_item_image"
            android:layout_width="match_parent"
            android:layout_height="100dp"
            android:scaleType="fitXY"
            android:src="@drawable/mainlogo"
            tools:ignore="ContentDescription" />

        <TextView
            android:id="@+id/related_item_name"
            android:layout_width="match_parent"
            android:layout_height="25dp"
            android:gravity="center"
            android:layout_marginTop="2sp"
            android:text="@string/app_name"
            android:background="@color/appcolor"
            android:textColor="@color/colorBlack"
            android:singleLine="true"
            android:maxLines="1"
            android:textSize="16sp"
            android:textStyle="bold" />


        <TextView
            android:id="@+id/related_item_price"
            android:layout_width="match_parent"
            android:layout_height="20sp"
            android:paddingStart="5sp"
            android:paddingEnd="0sp"
            android:text="@string/product_prize"
            android:background="@color/appcolor"
            android:textColor="@color/colorWhite"
            android:singleLine="true"
            android:maxLines="1"
            android:textSize="12sp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="20sp"
            android:paddingStart="5sp"
            android:paddingEnd="0sp"
            android:textSize="12sp"
            android:singleLine="true"
            android:maxLines="1"
            android:background="@color/appcolor"
            android:textColor="@color/colorWhite"
            android:text="@string/available" />

    </LinearLayout>

</androidx.cardview.widget.CardView>